--- a/module-1/lab-list-comprehensions/your-code/main.ipynb
+++ b/module-1/lab-list-comprehensions/your-code/main.ipynb
@@ -58,7 +58,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def consecutive_integers():\n",
+    "    return [i for i in range(1,51)]\n",
+    "print(consecutive_integers())\n"
+   ]
   },
   {
    "cell_type": "markdown",
