--- a/module-1/lab-string-operations/your-code/challenge-1.ipynb
+++ b/module-1/lab-string-operations/your-code/challenge-1.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,12 +33,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Durante un tiempo no estuvo segura de si su marido era su marido.\n"
+     ]
+    }
+   ],
    "source": [
     "str_list = ['Durante', 'un', 'tiempo', 'no', 'estuvo', 'segura', 'de', 'si', 'su', 'marido', 'era', 'su', 'marido']\n",
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "print(' '.join(str_list)+'.')"
    ]
   },
   {
@@ -50,12 +59,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Grocery list: bananas, bread, brownie mix, broccoli.\n"
+     ]
+    }
+   ],
    "source": [
     "food_list = ['Bananas', 'Chocolate', 'bread', 'diapers', 'Ice Cream', 'Brownie Mix', 'broccoli']\n",
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "food_list_b = []\n",
+    "for food in food_list:\n",
+    "    if (food.lower().startswith('b')):\n",
+    "        food_list_b.append(food.lower())\n",
+    "print((\"Grocery list: \"+', '.join(food_list_b)+'.'))\n"
    ]
   },
   {
@@ -69,28 +91,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'The area of the circle with radius: 5 is: 78.53981633974483'"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import math\n",
     "\n",
     "string1 = \"The area of the circle with radius:\"\n",
     "string2  = \"is:\"\n",
-    "radius = 4.5\n",
+    "radius = 5\n",
     "\n",
     "def area(x, pi = math.pi):\n",
-    "    # This function takes a radius and returns the area of a circle. We also pass a default value for pi.\n",
-    "    # Input: Float (and default value for pi)\n",
-    "    # Output: Float\n",
+    "    area_circle = float(pi*(x**2))\n",
+    "    return area_circle\n",
     "    \n",
-    "    # Sample input: 5.0\n",
-    "    # Sample Output: 78.53981633\n",
-    "    \n",
-    "    # Your code here:\n",
-    "    \n",
-    "    \n",
-    "# Your output string here:"
+    "# Your output string here:\n",
+    "\n",
+    "f'{string1} {radius} {string2} {area(radius)}'"
    ]
   },
   {
@@ -106,9 +134,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 91,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Some', 'say', 'the', 'world', 'will', 'end', 'in', 'fire', 'Some', 'say', 'in', 'ice', 'From', 'what', 'I’ve', 'tasted', 'of', 'desire', 'I', 'hold', 'with', 'those', 'who', 'favor', 'fire', 'But', 'if', 'it', 'had', 'to', 'perish', 'twice', 'I', 'think', 'I', 'know', 'enough', 'of', 'hate', 'To', 'say', 'that', 'for', 'destruction', 'ice', 'Is', 'also', 'great', 'And', 'would', 'suffice']\n",
+      "{'Some': 4, 'say': 3, 'the': 3, 'world': 5, 'will': 4, 'end': 3, 'in': 2, 'fire': 4, 'ice': 3, 'From': 4, 'what': 4, 'I’ve': 4, 'tasted': 6, 'of': 2, 'desire': 6, 'I': 1, 'hold': 4, 'with': 4, 'those': 5, 'who': 3, 'favor': 5, 'But': 3, 'if': 2, 'it': 2, 'had': 3, 'to': 2, 'perish': 6, 'twice': 5, 'think': 5, 'know': 4, 'enough': 6, 'hate': 4, 'To': 2, 'that': 4, 'for': 3, 'destruction': 11, 'Is': 2, 'also': 4, 'great': 5, 'And': 3, 'would': 5, 'suffice': 7}\n"
+     ]
+    }
+   ],
    "source": [
     "poem = \"\"\"Some say the world will end in fire,\n",
     "Some say in ice.\n",
@@ -120,7 +157,15 @@
     "Is also great\n",
     "And would suffice.\"\"\"\n",
     "\n",
-    "# Your code here:\n"
+    "diction ={}\n",
+    "\n",
+    "poem = poem.replace('\\n', ' ').replace('.', '').replace(',', '').split(' ')\n",
+    "\n",
+    "print(poem)\n",
+    "\n",
+    "for palabra in poem:\n",
+    "    diction.update({palabra:len(palabra)})\n",
+    "print(diction)"
    ]
   },
   {
@@ -238,7 +283,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
