--- a/module-1/lab-string-operations/your-code/challenge-1.ipynb
+++ b/module-1/lab-string-operations/your-code/challenge-1.ipynb
@@ -15,11 +15,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import re"
+    "import re\n",
+    "import pandas as pd \n",
+    "import numpy as np "
    ]
   },
   {
@@ -177,33 +179,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 79,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"The words of the poem that dont appear result are these ones: ['i', 'was', 'angry', 'with', 'my', 'friend', 'i', 'told', 'my', 'wrath', 'my', 'wrath', 'did', 'end', 'i', 'was', 'angry', 'with', 'my', 'foe', 'i', 'told', 'not', 'my', 'wrath', 'did', 'grow', 'i', 'waterd', 'fears', 'night', '', 'morning', 'with', 'my', 'tears', 'i', 'sunned', 'with', 'smiles', 'with', 'soft', 'deceitful', 'wiles', 'grew', 'both', 'day', 'night', '', 'till', 'bore', 'apple', 'bright', 'my', 'foe', 'beheld', 'shine', 'he', 'knew', 'that', 'was', 'mine', '', 'into', 'my', 'garden', 'stole', 'when', 'night', 'had', 'veild', 'pole', 'morning', 'glad', 'i', 'see', 'my', 'foe', 'outstretched', 'beneath', 'tree']\""
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "blacklist = ['and', 'as', 'an', 'a', 'the', 'in', 'it']\n",
     "\n",
     "poem = \"\"\"I was angry with my friend; \n",
-    "I told my wrath, my wrath did end.\n",
+    "I told my wrath, my wrath did end. \n",
     "I was angry with my foe: \n",
     "I told it not, my wrath did grow. \n",
     "\n",
-    "And I waterd it in fears,\n",
+    "And I waterd it in fears, \n",
     "Night & morning with my tears: \n",
-    "And I sunned it with smiles,\n",
+    "And I sunned it with smiles, \n",
     "And with soft deceitful wiles. \n",
     "\n",
-    "And it grew both day and night. \n",
+    "And it grew both day and night.  \n",
     "Till it bore an apple bright. \n",
-    "And my foe beheld it shine,\n",
-    "And he knew that it was mine. \n",
+    "And my foe beheld it shine, \n",
+    "And he knew that it was mine.  \n",
     "\n",
     "And into my garden stole, \n",
     "When the night had veild the pole; \n",
     "In the morning glad I see; \n",
     "My foe outstretched beneath the tree.\"\"\"\n",
     "\n",
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "\n",
+    "cleaning_poem  = ''\n",
+    "\n",
+    "for word in poem:\n",
+    "    for char in word:\n",
+    "        if char.lower().isalpha() or char == ' ': # Solo selecciono los casos que sean una letra o un espacio y los copio en la variable auxiliar\n",
+    "            #poem.replace(char,'')\n",
+    "            cleaning_poem += char\n",
+    "poem = cleaning_poem.lower().split(' ',)\n",
+    "# print(poem, len(poem)) # Comprobando que la lista esta bien construida\n",
+    "\n",
+    "result = []\n",
+    "\n",
+    "for string in poem:\n",
+    "    if string not in blacklist:\n",
+    "        result.append(string)\n",
+    "        \n",
+    "f'The words of the poem that dont appear result are these ones: {result}'"
    ]
   },
   {
@@ -217,14 +248,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 80,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['T', 'P']\n"
+     ]
+    }
+   ],
    "source": [
     "poem = \"\"\"The apparition of these faces in the crowd;\n",
     "Petals on a wet, black bough.\"\"\"\n",
     "\n",
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "\n",
+    "print(re.findall('[A-Z]', poem))\n",
+    "\n"
    ]
   },
   {
@@ -236,13 +278,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 88,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['123abc', 'abc123', 'JohnSmith1', 'ABBY4']\n"
+     ]
+    }
+   ],
    "source": [
-    "data = ['123abc', 'abc123', 'JohnSmith1', 'ABBY4', 'JANE']\n",
+    "import re \n",
     "\n",
-    "# Your code here:\n"
+    "data = ['123abc', 'abc123', 'JohnSmith1', 'ABBY4', 'JANE']\n",
+    "pattern = r'\\d'\n",
+    "\n",
+    "# Your code here:\n",
+    "resultado = []\n",
+    "for string in data:\n",
+    "    if re.search(pattern,string):\n",
+    "        resultado.append(string)\n",
+    "print(resultado)"
    ]
   },
   {
@@ -258,13 +316,37 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['123abc', 'abc123', 'JohnSmith1']\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re \n",
+    "\n",
+    "data = ['123abc', 'abc123', 'JohnSmith1', 'ABBY4', 'JANE']\n",
+    "pattern = r'(\\d[a-z])|([a-z]\\d)'\n",
+    "\n",
+    "# Your code here:\n",
+    "resultado = []\n",
+    "for string in data:\n",
+    "    if re.search(pattern,string):\n",
+    "        resultado.append(string)\n",
+    "print(resultado)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "data = ['123abc', 'abc123', 'JohnSmith1', 'ABBY4', 'JANE']\n",
-    "# Your code here:\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
