--- a/module-1/lab-tuple-set-dict/your-code/challenge-1.ipynb
+++ b/module-1/lab-tuple-set-dict/your-code/challenge-1.ipynb
@@ -15,12 +15,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Your code here\n",
-    "#prueba 1"
+    "tup = ('I',)"
    ]
   },
   {
@@ -34,11 +34,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('I',)\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "print(tup)"
    ]
   },
   {
@@ -56,13 +65,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('I', 'I', 'r', 'o', 'n', 'h', 'a', 'c', 'k')\n"
+     ]
+    }
+   ],
    "source": [
     "# Your code here\n",
+    "tup = ('I',)\n",
+    "value_to_append = 'ronhack'\n",
+    "auxiliar = list(tup)\n",
+    "for char in value_to_append:\n",
+    "    auxiliar.append(char)\n",
+    "tup = tuple(auxiliar)\n",
+    "print(tup)\n",
     "\n",
-    "# Your explanation here\n"
+    "# Your explanation here\n",
+    "\n",
+    "# It is only possible if we use auxiliary lists"
    ]
   },
   {
@@ -80,13 +106,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('I', 'I', 'r', 'o', 'n', 'h', 'a', 'c', 'k')\n",
+      "('I', 'I', 'r', 'o', 'n', 'h', 'a', 'c', 'k', 'I', 'I', 'r', 'o', 'n', 'h', 'a', 'c', 'k')\n"
+     ]
+    }
+   ],
    "source": [
     "# Your code here\n",
     "\n",
-    "# Your explanation here\n"
+    "tup = ('I',)\n",
+    "value_to_append = 'Ironhack'\n",
+    "auxiliar = list(tup)\n",
+    "for char in value_to_append:\n",
+    "    auxiliar.append(char)\n",
+    "tup = tuple(auxiliar)\n",
+    "print(tup)\n",
+    "\n",
+    "# Another option is using concatenates\n",
+    "\n",
+    "tup = tup + tuple(auxiliar)\n",
+    "print(tup)\n",
+    "\n",
+    "\n",
+    "\n",
+    "# Your explanation here\n",
+    "\n",
+    "# Same as before, it can be done with auxiliary lists but it doesnt make much sense\n"
    ]
   },
   {
@@ -104,11 +156,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('I', 'r', 'o', 'n') ('h', 'a', 'c', 'k')\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "tup = ('I', 'r', 'o', 'n', 'h', 'a', 'c', 'k')\n",
+    "tup1 = ()\n",
+    "tup2= ()\n",
+    "\n",
+    "\n",
+    "for char in range(0,int(len(tup)/2)):\n",
+    "    tup1 = tup1 + tuple(tup[char])\n",
+    "    tup2 = tuple(tup[-char-1]) + tup2 \n",
+    "print(tup1,tup2)"
    ]
   },
   {
@@ -122,11 +191,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('I', 'r', 'o', 'n', 'h', 'a', 'c', 'k')\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "tup3 = tup1 + tup2\n",
+    "print(tup3)"
    ]
   },
   {
@@ -138,11 +217,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Tup1 has: 4 elements and Tup2 has: 4 elements'"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "f'Tup1 has: {len(tup1)} elements and Tup2 has: {len(tup2)} elements'\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Summing tup1 and tup2 lenghts we have the same length as tup3\n"
+     ]
+    }
+   ],
+   "source": [
+    "if len(tup3) == (len(tup1)+len(tup2)):\n",
+    "    print(\"Summing tup1 and tup2 lenghts we have the same length as tup3\")"
    ]
   },
   {
@@ -154,11 +263,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 72,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "contador = 0\n",
+    "for char in tup3:\n",
+    "    contador += 1\n",
+    "    if char == 'h':\n",
+    "        print(contador-1)"
    ]
   },
   {
@@ -178,11 +300,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 83,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TRUE Letter a is in tup3\n",
+      "FALSE Letter b is NOT in tup3\n",
+      "TRUE Letter c is in tup3\n",
+      "FALSE Letter d is NOT in tup3\n",
+      "FALSE Letter e is NOT in tup3\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "\n",
+    "letters = [\"a\", \"b\", \"c\", \"d\", \"e\"]\n",
+    "for letter in letters:\n",
+    "    if letter in tup3:\n",
+    "        print('TRUE Letter ' + letter + ' is in tup3')\n",
+    "    else:\n",
+    "        print('FALSE Letter ' + letter + ' is NOT in tup3')"
    ]
   },
   {
@@ -196,12 +337,39 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Letter a is 1 times in tup3\n",
+      "Letter b is 0 times in tup3\n",
+      "Letter c is 1 times in tup3\n",
+      "Letter d is 0 times in tup3\n",
+      "Letter e is 0 times in tup3\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Your code here\n",
+    "letters = [\"a\", \"b\", \"c\", \"d\", \"e\"]\n",
+    "counter = 0\n",
+    "for letter in letters:\n",
+    "    for char in tup3:\n",
+    "        if letter == char:\n",
+    "            counter += 1\n",
+    "    print('Letter ' + str(letter) + ' is ' + str(counter) +' times in tup3')\n",
+    "    counter = 0"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Your code here\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
