--- a/module-1/lab-tuple-set-dict/your-code/challenge-2.ipynb
+++ b/module-1/lab-tuple-set-dict/your-code/challenge-2.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,12 +38,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[66, 24, 39, 28, 61, 45, 86, 84, 18, 56, 69, 47, 23, 32, 68, 34, 63, 43, 8, 16, 92, 14, 2, 80, 10, 88, 77, 4, 33, 7, 5, 74, 26, 72, 59, 21, 15, 12, 42, 20, 38, 90, 67, 57, 27, 70, 36, 93, 76, 89, 50, 97, 78, 81, 58, 53, 1, 83, 46, 41, 29, 37, 31, 40, 60, 73, 19, 11, 44, 87, 13, 48, 17, 94, 79, 9, 82, 95, 75, 65]\n"
+     ]
+    }
+   ],
    "source": [
     "# Your code here\n",
-    "# prueba 2"
+    "# prueba 2\n",
+    "\n",
+    "sample_list_1 = random.sample(range(1,100),k=80)\n",
+    "\n",
+    "print(sample_list_1)\n",
+    "    \n"
    ]
   },
   {
@@ -55,11 +68,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1, 2, 4, 5, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 23, 24, 26, 27, 28, 29, 31, 32, 33, 34, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 50, 53, 56, 57, 58, 59, 60, 61, 63, 65, 66, 67, 68, 69, 70, 72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82, 83, 84, 86, 87, 88, 89, 90, 92, 93, 94, 95, 97}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set1 = set(sample_list_1)\n",
+    "\n",
+    "print(set1)"
    ]
   },
   {
@@ -78,11 +102,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[38, 34, 63, 29, 64, 69, 28, 30, 16, 80, 1, 47, 88, 24, 76, 12, 94, 34, 53, 21, 70, 57, 61, 43, 77, 94, 97, 59, 34, 60, 98, 78, 83, 80, 55, 76, 70, 30, 51, 22, 65, 91, 39, 1, 78, 57, 60, 79, 21, 21, 70, 82, 84, 72, 13, 45, 33, 58, 86, 58, 87, 65, 69, 94, 59, 44, 88, 97, 56, 25, 40, 40, 20, 28, 33, 40, 40, 27, 32, 30]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "sample_list_2 = []\n",
+    "\n",
+    "for i in range(80):\n",
+    "    sample_list_2 = sample_list_2 + random.sample(range(1,100),k=1)\n",
+    "print(sample_list_2)"
    ]
   },
   {
@@ -94,11 +131,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "53\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set2 = set(sample_list_2)\n",
+    "print(len(set2))"
    ]
   },
   {
@@ -110,11 +157,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{2, 4, 5, 7, 8, 9, 10, 11, 14, 15, 17, 18, 19, 23, 26, 31, 36, 37, 41, 42, 46, 48, 50, 66, 67, 68, 73, 74, 75, 81, 89, 90, 92, 93, 95}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set3 = set1-set2\n",
+    "print(set3)"
    ]
   },
   {
@@ -126,11 +183,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{64, 98, 51, 22, 55, 25, 91, 30}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set4 = set2-set1\n",
+    "print(set4)"
    ]
   },
   {
@@ -142,35 +209,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1, 12, 13, 16, 20, 21, 24, 27, 28, 29, 32, 33, 34, 38, 39, 40, 43, 44, 45, 47, 53, 56, 57, 58, 59, 60, 61, 63, 65, 69, 70, 72, 76, 77, 78, 79, 80, 82, 83, 84, 86, 87, 88, 94, 97}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### What is the relationship among the following values:\n",
-    "\n",
-    "* len(set1)\n",
-    "* len(set2)\n",
-    "* len(set3)\n",
-    "* len(set4)\n",
-    "* len(set5)\n",
-    "\n",
-    "Use a math formular to represent that relationship. Test your formular with Python code."
+    "# Your code here\n",
+    "set5 = set1.intersection(set2)\n",
+    "print(set5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here\n"
+    "#### What is the relationship among the following values:\n",
+    "\n",
+    "#* len(set1)\n",
+    "#* len(set2)\n",
+    "#* len(set3)\n",
+    "#* len(set4)\n",
+    "#* len(set5)\n",
+    "\n",
+    "\n",
+    "#Use a math formular to represent that relationship. Test your formular with Python code."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True True\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Your code here\n",
+    "\n",
+    "# len(1) = x\n",
+    "\n",
+    "print(len(set1) == len(set3)+len(set5),len(set2) == len(set4)+len(set5))"
    ]
   },
   {
@@ -182,11 +274,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set6 = set()"
    ]
   },
   {
@@ -198,11 +291,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1, 2, 4, 5, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 23, 24, 26, 27, 28, 29, 31, 32, 33, 34, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 50, 53, 56, 57, 58, 59, 60, 61, 63, 65, 66, 67, 68, 69, 70, 72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82, 83, 84, 86, 87, 88, 89, 90, 92, 93, 94, 95, 97}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set6.update(set3,set5)\n",
+    "print(set6)"
    ]
   },
   {
@@ -214,11 +317,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set1 == set6"
    ]
   },
   {
@@ -230,11 +345,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False True\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "print(set2.issubset(set1),set3.issubset(set1))"
    ]
   },
   {
@@ -248,11 +372,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "88\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set.union(set1,set2,(set.union(set3,set4,set5)))\n",
+    "print(len(set.union(set1,set2,(set.union(set3,set4,set5)))))\n"
    ]
   },
   {
@@ -264,11 +398,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set1.pop()"
    ]
   },
   {
@@ -284,12 +430,59 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{2, 4, 5, 7, 8, 10, 12, 13, 14, 15, 16, 17, 18, 20, 23, 24, 26, 27, 28, 32, 33, 34, 36, 37, 38, 40, 42, 43, 44, 45, 46, 47, 48, 50, 53, 56, 57, 58, 60, 63, 65, 66, 67, 68, 70, 72, 73, 74, 75, 76, 77, 78, 80, 82, 83, 84, 86, 87, 88, 90, 92, 93, 94, 95, 97}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Your code here\n",
+    "list_to_remove = [1, 9, 11, 19, 21, 29, 31, 39, 41, 49, 51, 59, 61, 69, 71, 79, 81, 89, 91, 99]\n",
+    "\n",
+    "for i in list_to_remove:\n",
+    "    if i in set1:\n",
+    "        set1.remove(i)\n",
+    "print(set1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "pop() takes no arguments (1 given)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-22-ecd63ef3c8ea>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mlist_to_remove\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m         \u001b[0mset1\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mremove\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mset1\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpop\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mset1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: pop() takes no arguments (1 given)"
+     ]
+    }
+   ],
+   "source": [
+    "# Your code here\n",
+    "list_to_remove = [1, 9, 11, 19, 21, 29, 31, 39, 41, 49, 51, 59, 61, 69, 71, 79, 81, 89, 91, 99]\n",
+    "\n",
+    "for i in list_to_remove:\n",
+    "        set1.remove(set1.pop(i))\n",
+    "print(set1)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Your code here\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
