--- a/module-1/lab-map-reduce-filter/your-code/main.ipynb
+++ b/module-1/lab-map-reduce-filter/your-code/main.ipynb
@@ -12,12 +12,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# import reduce from functools, numpy and pandas\n",
-    "\n"
+    "\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from functools import reduce"
    ]
   },
   {
@@ -33,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -444,7 +447,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
