--- a/module-2/lab-pca/your-code/main.ipynb
+++ b/module-2/lab-pca/your-code/main.ipynb
@@ -617,12 +617,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Your conclusions here:\n",
-    "\n"
+    "\n",
+    "# They are clearly divided"
    ]
   },
   {
